[package]
name = "rankpath-mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rankpath-mcp-server"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
